--- a/index.html
+++ b/index.html
@@ -2,41 +2,419 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jiabao's Portfolio</title>
-    <link rel="stylesheet" href="./page/index.css" />
-  </head>
-  <body class="page">
-    <div class="page__content">
-      <section class="header">
-        <div class="header__title">
-          <p class="header__welcome">Welcome.</p>
-          <p class="header__description">
-            My name is Jiabao Wu, a Boston-based full-stack developer
-            specializing in the MERN stack. With a background in project
-            management, I excel in collaborating within agile teams to build
-            seamless and efficient web applications. I’m passionate about
-            continuous learning and staying at the forefront of technology.
-          </p>
-        </div>
-      </section>
-      <section class="main">
-        <div class="main__caption">
-          <p class="main__title">My Work</p>
-          <p class="main__subtitle">A collection of projects I've worked on.</p>
-        </div>
-      </section>
-      <section class="cards">
-        <ul class="cards list"></ul>
-      </section>
-      <section class="footer">
-        <p class="footer__caption">@2024 wujiabaotonny@gmail.com</p>
-      </section>
-    </div>
-    <!-- --------------------------- Open Card Modal --------------------------- -->
 
-    <div class="modal__preview">
-      <div class="modal__container"></div>
-    </div>
+    <!--=============== UNICONS ===============-->
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="assets/css/index.css" />
+
+    <title>Portfolio Website</title>
+  </head>
+  <body>
+    <!--=============== HEADER ===============-->
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="index.html" class="nav__logo">j<span>i</span>abao</a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li><a href="#home" class="nav__link active-link">Home</a></li>
+
+            <li><a href="#about" class="nav__link">About</a></li>
+
+            <li><a href="#services" class="nav__link">Services</a></li>
+
+            <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
+
+            <li><a href="#contact" class="nav__link">Contact</a></li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="ui uil-times"></i>
+          </div>
+        </div>
+
+        <div class="nav__socials">
+          <a href="www.facebook.com" target="_blank" class="nav__social-link">
+            <i class="uil uil-facebook-f"></i>
+          </a>
+
+          <a href="www.twitter.com" target="_blank" class="nav__social-link">
+            <i class="uil uil-twitter"></i>
+          </a>
+
+          <a href="www.linkedin.com" target="_blank" class="nav__social-link">
+            <i class="uil uil-linkedin"></i>
+          </a>
+
+          <a href="www.instagram.com" target="_blank" class="nav__social-link">
+            <i class="uil uil-instagram"></i>
+          </a>
+        </div>
+
+        <div class="nav__btns">
+          <a href="#contact" class="nav__link-btn btn">Let's Talk</a>
+
+          <div class="nav__toggle" id="nav-toggle">
+            <i class="uil uil-bars"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!--=============== MAIN ===============-->
+    <main class="main">
+      <!--=============== HOME ===============-->
+      <section class="home" id="home">
+        <div class="home__container container grid">
+          <div class="home__content">
+            <span class="home__subtitle">Welcome To My Space</span>
+            <h1 class="home__title">
+              Hi,I'm Jiabao Wu <span>React Developer.</span> based in Boston.
+            </h1>
+          </div>
+
+          <img src="assets/img/home.jpg" alt="" class="home__img" />
+        </div>
+      </section>
+
+      <!--=============== ABOUT ===============-->
+      <section class="about section" id="about">
+        <div class="about__container container grid">
+          <img src="assets/img/about.jpg" alt="" class="about__img" />
+
+          <div class="about__content">
+            <h2 class="section__title">About Me</h2>
+
+            <p class="about__description">
+              My name is Jiabao Wu, a Boston-based full-stack React developer
+              specializing in the MERN stack. With a background in project
+              management, I excel in collaborating within agile teams to build
+              seamless and efficient web applications. I’m passionate about
+              continuous learning and staying at the forefront of technology.
+            </p>
+
+            <div class="tabs__btns">
+              <span class="tabs__btn tab__active" data-target="#skills"
+                >Main Skills</span
+              >
+
+              <span class="tabs__btn" data-target="#experience"
+                >Experience</span
+              >
+              <span class="tabs__btn" data-target="#education"
+                >Education & Certification</span
+              >
+            </div>
+
+            <div class="tabs__content">
+              <div class="tabs__item tab__active" data-content id="skills">
+                <div class="tabs__data grid">
+                  <p class="tabs__description"></p>
+
+                  <p class="tabs__description">
+                    <span>Web and user interface design</span> - Development
+                    <span>Websites, web experiences, ...</span>
+                  </p>
+
+                  <p class="tabs__description">
+                    <span>Interaction design</span> - Animation
+                    <span>I like to move it move it.</span>
+                  </p>
+                </div>
+              </div>
+
+              <div class="tabs__item" data-content id="award">
+                <div class="tabs__data grid">
+                  <p class="tabs__description">
+                    <span>Awwwards.com</span> - Winner
+                    <span>2019 - 2020</span>
+                  </p>
+
+                  <p class="tabs__description">
+                    <span>CSS Design Awards</span> - Winner
+                    <span>2017 - 2018</span>
+                  </p>
+
+                  <p class="tabs__description">
+                    <span>Design nominees</span> - site of the day
+                    <span>2013 - 2014</span>
+                  </p>
+                </div>
+              </div>
+
+              <div class="tabs__item" data-content id="experience">
+                <div class="tabs__data grid">
+                  <p class="tabs__description">
+                    <span>Sr. Front-end Engineer</span> - Google
+                    <span>2018 - Current</span>
+                  </p>
+
+                  <p class="tabs__description">
+                    <span>Front-end Engineer</span> - Microsoft
+                    <span>2017 - 2018</span>
+                  </p>
+
+                  <p class="tabs__description">
+                    <span>Software Engineer </span> - Alibaba
+                    <span>2013 - 2014</span>
+                  </p>
+                </div>
+              </div>
+
+              <div class="tabs__item" data-content id="education">
+                <div class="tabs__data grid">
+                  <p class="tabs__description">
+                    <span>BSc In CSE</span> - ABC Institute, Los Angeles, CA
+                    <span>2009</span>
+                  </p>
+
+                  <p class="tabs__description">
+                    <span>Diploma in Computer Science</span> - Gamma Technical
+                    Institute
+                    <span>2009</span>
+                  </p>
+
+                  <p class="tabs__description">
+                    <span>Graphic Designer</span> - ABC Institute, Los Angeles,
+                    CA
+                    <span>2007</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--=============== PORTFOLIO ===============-->
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">My Latest Project</h2>
+        <p class="section__description">
+          Here you will find a collection of projects I've worked on.
+        </p>
+
+        <div class="portfolio__container container grid">
+          <div class="portfolio__item">
+            <img
+              src="assets/img/portfolio-1.jpg"
+              alt=""
+              class="portfolio__img"
+            />
+
+            <div class="portfolio__data">
+              <p class="portfolio__subtitle">Around the U.S.</p>
+              <h3 class="portfolio__title">Front-end Application</h3>
+              <p class="portfolio__description">
+                A platform for U.S. travel enthusiasts to share adventures,
+                upload photos, and edit profiles.
+              </p>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <img
+              src="assets/img/portfolio-2.jpg"
+              alt=""
+              class="portfolio__img"
+            />
+
+            <div class="portfolio__data">
+              <p class="portfolio__subtitle">Product Design</p>
+              <h3 class="portfolio__title">Web Development</h3>
+              <p class="portfolio__description">
+                Discover everything about this unique coffee-themed library,
+                where you can enjoy a cozy read with a cup of warmth in hand!
+              </p>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <img
+              src="assets/img/portfolio-3.jpg"
+              alt=""
+              class="portfolio__img"
+            />
+
+            <div class="portfolio__data">
+              <p class="portfolio__subtitle">Application</p>
+              <h3 class="portfolio__title">Photoshop Design</h3>
+              <p class="portfolio__description">
+                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+              </p>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <img
+              src="assets/img/portfolio-4.jpg"
+              alt=""
+              class="portfolio__img"
+            />
+
+            <div class="portfolio__data">
+              <p class="portfolio__subtitle">Web Design</p>
+              <h3 class="portfolio__title">Website Design</h3>
+              <p class="portfolio__description">
+                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+              </p>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <img
+              src="assets/img/portfolio-5.jpg"
+              alt=""
+              class="portfolio__img"
+            />
+
+            <div class="portfolio__data">
+              <p class="portfolio__subtitle">Application</p>
+              <h3 class="portfolio__title">Web Application</h3>
+              <p class="portfolio__description">
+                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+              </p>
+            </div>
+          </div>
+
+          <div class="portfolio__item">
+            <img
+              src="assets/img/portfolio-6.jpg"
+              alt=""
+              class="portfolio__img"
+            />
+
+            <div class="portfolio__data">
+              <p class="portfolio__subtitle">Photoshop</p>
+              <h3 class="portfolio__title">Photo Editing</h3>
+              <p class="portfolio__description">
+                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--=============== CONTACT ===============-->
+      <section class="contact section" id="contact">
+        <div class="contact__container container grid">
+          <div class="contact__content">
+            <h2 class="section__title">Contact Me</h2>
+
+            <p class="contact__description">
+              I am available for freelance work. Connect with me via phone:
+              <a href="tel:+17818667750">+1 781-866-7750</a> or email:
+              <a href="mailto:wujiabaotonny@gmail.com"
+                >wujiabaotonny@gmail.com</a
+              >
+            </p>
+
+            <form class="contact__form" id="contact-form">
+              <div class="contact__form-input">
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="Your Name *"
+                  class="contact__input"
+                  id="contact-name"
+                />
+              </div>
+
+              <div class="contact__form-input">
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="Your e-mail"
+                  class="contact__input"
+                  id="contact-email"
+                />
+              </div>
+
+              <div class="contact__form-input">
+                <input
+                  type="text"
+                  name="subject"
+                  placeholder="Write a Subject"
+                  class="contact__input"
+                  id="contact-subject"
+                />
+              </div>
+
+              <div class="contact__form-input">
+                <textarea
+                  name="message"
+                  id="contact-message"
+                  class="contact__input textarea"
+                  placeholder="Your Message"
+                ></textarea>
+              </div>
+
+              <input type="submit" value="Submit" class="btn" />
+
+              <p class="error__message" id="error-message"></p>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!--=============== FOOTER ===============-->
+    <footer class="footer">
+      <div class="footer__container container grid">
+        <a href="index.html" class="footer__logo">j<span>i</span>abao</a>
+
+        <div class="footer__socials">
+          <a
+            href="www.facebook.com"
+            target="_blank"
+            class="footer__social-link"
+          >
+            <i class="uil uil-facebook-f"></i>
+          </a>
+
+          <a href="www.twitter.com" target="_blank" class="footer__social-link">
+            <i class="uil uil-twitter"></i>
+          </a>
+
+          <a
+            href="www.linkedin.com"
+            target="_blank"
+            class="footer__social-link"
+          >
+            <i class="uil uil-linkedin"></i>
+          </a>
+
+          <a
+            href="www.instagram.com"
+            target="_blank"
+            class="footer__social-link"
+          >
+            <i class="uil uil-instagram"></i>
+          </a>
+        </div>
+
+        <p class="footer__copyright">&copy; 2025. Jiabao Wu</p>
+      </div>
+    </footer>
+
+    <!--=============== SCROLL UP ===============-->
+    <a href="#" class="scrollup" id="scroll-up">
+      <i class="uil uil-angle-up scrollup__icon"></i>
+    </a>
+
+    <!--=============== EMAIL JS ===============-->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+
+    <!--=============== MAIN JS ===============-->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
