new update on cotact

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 
             <li><a href="#about" class="nav__link">About</a></li>
 
-            <li><a href="#services" class="nav__link">Services</a></li>
-
             <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
 
             <li><a href="#contact" class="nav__link">Contact</a></li>
@@ -41,20 +39,12 @@
         </div>
 
         <div class="nav__socials">
-          <a href="www.facebook.com" target="_blank" class="nav__social-link">
-            <i class="uil uil-facebook-f"></i>
-          </a>
-
-          <a href="www.twitter.com" target="_blank" class="nav__social-link">
-            <i class="uil uil-twitter"></i>
-          </a>
-
-          <a href="www.linkedin.com" target="_blank" class="nav__social-link">
+          <a
+            href="https://www.linkedin.com/in/jiabaowu78186677/"
+            target="_blank"
+            class="nav__social-link"
+          >
             <i class="uil uil-linkedin"></i>
-          </a>
-
-          <a href="www.instagram.com" target="_blank" class="nav__social-link">
-            <i class="uil uil-instagram"></i>
           </a>
         </div>
 
@@ -76,7 +66,8 @@
           <div class="home__content">
             <span class="home__subtitle">Welcome To My Space</span>
             <h1 class="home__title">
-              Hi,I'm Jiabao Wu <span>React Developer.</span> based in Boston.
+              Hi,&nbsp;I'm Jiabao Wu <span>React Developer.</span> based in
+              Boston.
             </h1>
           </div>
 
@@ -117,53 +108,38 @@
               <div class="tabs__item tab__active" data-content id="skills">
                 <div class="tabs__data grid">
                   <p class="tabs__description"></p>
-
+                  <h4>Programming Languages:</h4>
                   <p class="tabs__description">
-                    <span>Web and user interface design</span> - Development
-                    <span>Websites, web experiences, ...</span>
+                    JavaScript，Java, Python， Babel HTML/CSS
                   </p>
-
-                  <p class="tabs__description">
-                    <span>Interaction design</span> - Animation
-                    <span>I like to move it move it.</span>
-                  </p>
+                  <h4>Databases,Frame Work &Tools:</h4>
                 </div>
-              </div>
-
-              <div class="tabs__item" data-content id="award">
-                <div class="tabs__data grid">
-                  <p class="tabs__description">
-                    <span>Awwwards.com</span> - Winner
-                    <span>2019 - 2020</span>
-                  </p>
-
-                  <p class="tabs__description">
-                    <span>CSS Design Awards</span> - Winner
-                    <span>2017 - 2018</span>
-                  </p>
-
-                  <p class="tabs__description">
-                    <span>Design nominees</span> - site of the day
-                    <span>2013 - 2014</span>
-                  </p>
-                </div>
+                <p>
+                  NoSQL, MongoDB, MySQL,Node.js, Express.js, React, Git, github
+                </p>
               </div>
 
               <div class="tabs__item" data-content id="experience">
                 <div class="tabs__data grid">
                   <p class="tabs__description">
-                    <span>Sr. Front-end Engineer</span> - Google
-                    <span>2018 - Current</span>
+                    <span class="tabs__title"
+                      >Logistics Project Coordinator</span
+                    >
+                    - Blue Station
+                    <span>2023 - 2024</span>
                   </p>
 
                   <p class="tabs__description">
-                    <span>Front-end Engineer</span> - Microsoft
-                    <span>2017 - 2018</span>
+                    <span class="tabs__title">Tech Recruiter</span> - BeaconFire
+                    <span>2023- 2023</span>
                   </p>
 
                   <p class="tabs__description">
-                    <span>Software Engineer </span> - Alibaba
-                    <span>2013 - 2014</span>
+                    <span class="tabs__title"
+                      >Teacher and Director of Administration
+                    </span>
+                    - New Chennel Internation Education Group
+                    <span>2020 - 2021</span>
                   </p>
                 </div>
               </div>
@@ -171,20 +147,31 @@
               <div class="tabs__item" data-content id="education">
                 <div class="tabs__data grid">
                   <p class="tabs__description">
-                    <span>BSc In CSE</span> - ABC Institute, Los Angeles, CA
-                    <span>2009</span>
+                    <span class="tabs__title"
+                      >Full-Stack Software Engineer Apprenticeship
+                    </span>
+                    - TripleTen,&nbsp; Boston, &nbsp;MA
+                    <span>2025</span>
+                  </p>
+                  <p class="tabs__description">
+                    <span class="tabs__title"
+                      >MS in Computer Information Technology</span
+                    >
+                    - Northern Arizona University Boston,&nbsp;MA
+                    <span>2024</span>
                   </p>
 
                   <p class="tabs__description">
-                    <span>Diploma in Computer Science</span> - Gamma Technical
-                    Institute
-                    <span>2009</span>
+                    <span class="tabs__title">MS in Nonprofit Management </span>
+                    - Northeastern University,&nbsp;Boston,&nbsp;MA
+                    <span>2022</span>
                   </p>
 
                   <p class="tabs__description">
-                    <span>Graphic Designer</span> - ABC Institute, Los Angeles,
-                    CA
-                    <span>2007</span>
+                    <span class="tabs__title">BS in Internation Trade</span> -
+                    Beijing Internation Studies
+                    University,&nbsp;Beijing,&nbsp;China
+                    <span>2018</span>
                   </p>
                 </div>
               </div>
@@ -206,6 +193,7 @@
               src="assets/img/portfolio-1.jpg"
               alt=""
               class="portfolio__img"
+              onclick="window.open('https://jiabaowu1.github.io/se_project_aroundtheus/','_blank')"
             />
 
             <div class="portfolio__data">
@@ -223,10 +211,11 @@
               src="assets/img/portfolio-2.jpg"
               alt=""
               class="portfolio__img"
+              onclick="window.open('https://jiabaowu1.github.io/se_project_coffeeshop/','_blank')"
             />
 
             <div class="portfolio__data">
-              <p class="portfolio__subtitle">Product Design</p>
+              <p class="portfolio__subtitle">BrewBooks</p>
               <h3 class="portfolio__title">Web Development</h3>
               <p class="portfolio__description">
                 Discover everything about this unique coffee-themed library,
@@ -240,61 +229,15 @@
               src="assets/img/portfolio-3.jpg"
               alt=""
               class="portfolio__img"
+              onclick="window.open(' https://jiabaowu1.github.io/What-to-Wear-/','_blank')"
             />
 
             <div class="portfolio__data">
-              <p class="portfolio__subtitle">Application</p>
-              <h3 class="portfolio__title">Photoshop Design</h3>
+              <p class="portfolio__subtitle">What to Wear</p>
+              <h3 class="portfolio__title">Front-end Application</h3>
               <p class="portfolio__description">
-                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
-              </p>
-            </div>
-          </div>
-
-          <div class="portfolio__item">
-            <img
-              src="assets/img/portfolio-4.jpg"
-              alt=""
-              class="portfolio__img"
-            />
-
-            <div class="portfolio__data">
-              <p class="portfolio__subtitle">Web Design</p>
-              <h3 class="portfolio__title">Website Design</h3>
-              <p class="portfolio__description">
-                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
-              </p>
-            </div>
-          </div>
-
-          <div class="portfolio__item">
-            <img
-              src="assets/img/portfolio-5.jpg"
-              alt=""
-              class="portfolio__img"
-            />
-
-            <div class="portfolio__data">
-              <p class="portfolio__subtitle">Application</p>
-              <h3 class="portfolio__title">Web Application</h3>
-              <p class="portfolio__description">
-                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
-              </p>
-            </div>
-          </div>
-
-          <div class="portfolio__item">
-            <img
-              src="assets/img/portfolio-6.jpg"
-              alt=""
-              class="portfolio__img"
-            />
-
-            <div class="portfolio__data">
-              <p class="portfolio__subtitle">Photoshop</p>
-              <h3 class="portfolio__title">Photo Editing</h3>
-              <p class="portfolio__description">
-                Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+                a React web application that reads weather data from a Weather
+                API and suggests suitable clothing for users.
               </p>
             </div>
           </div>
@@ -308,57 +251,22 @@
             <h2 class="section__title">Contact Me</h2>
 
             <p class="contact__description">
-              I am available for freelance work. Connect with me via phone:
-              <a href="tel:+17818667750">+1 781-866-7750</a> or email:
+              I'm always looking for new connections. Shoot me an email and
+              let's chat! email:
               <a href="mailto:wujiabaotonny@gmail.com"
                 >wujiabaotonny@gmail.com</a
               >
             </p>
 
-            <form class="contact__form" id="contact-form">
-              <div class="contact__form-input">
-                <input
-                  type="text"
-                  name="name"
-                  placeholder="Your Name *"
-                  class="contact__input"
-                  id="contact-name"
-                />
-              </div>
-
-              <div class="contact__form-input">
-                <input
-                  type="email"
-                  name="email"
-                  placeholder="Your e-mail"
-                  class="contact__input"
-                  id="contact-email"
-                />
-              </div>
-
-              <div class="contact__form-input">
-                <input
-                  type="text"
-                  name="subject"
-                  placeholder="Write a Subject"
-                  class="contact__input"
-                  id="contact-subject"
-                />
-              </div>
-
-              <div class="contact__form-input">
-                <textarea
-                  name="message"
-                  id="contact-message"
-                  class="contact__input textarea"
-                  placeholder="Your Message"
-                ></textarea>
-              </div>
-
-              <input type="submit" value="Submit" class="btn" />
-
-              <p class="error__message" id="error-message"></p>
-            </form>
+            <button
+              class="contact__email-btn"
+              onclick="window.location.href='mailto:wujiabaotonny@gmail.com'"
+            >
+              Email Me
+            </button>
+            <button class="contact__meeting-btn" onclick="openCalendly()">
+              Schedule a Meeting
+            </button>
           </div>
         </div>
       </section>
@@ -371,31 +279,11 @@
 
         <div class="footer__socials">
           <a
-            href="www.facebook.com"
-            target="_blank"
-            class="footer__social-link"
-          >
-            <i class="uil uil-facebook-f"></i>
-          </a>
-
-          <a href="www.twitter.com" target="_blank" class="footer__social-link">
-            <i class="uil uil-twitter"></i>
-          </a>
-
-          <a
-            href="www.linkedin.com"
+            href="https://www.linkedin.com/in/jiabaowu78186677/"
             target="_blank"
             class="footer__social-link"
           >
             <i class="uil uil-linkedin"></i>
-          </a>
-
-          <a
-            href="www.instagram.com"
-            target="_blank"
-            class="footer__social-link"
-          >
-            <i class="uil uil-instagram"></i>
           </a>
         </div>
 
