new update on header

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a
             href="https://www.linkedin.com/in/jiabaowu78186677/"
             target="_blank"
-            class="nav__social-link"
+            class="nav__social-link btn"
           >
             <i class="uil uil-linkedin"></i>
           </a>
@@ -226,7 +226,7 @@
 
           <div class="portfolio__item">
             <img
-              src="assets/img/portfolio-3.jpg"
+              src=""
               alt=""
               class="portfolio__img"
               onclick="window.open(' https://jiabaowu1.github.io/What-to-Wear-/','_blank')"
